fixed text overflow issue

--- a/client/src/assets/css/list_owner.scss
+++ b/client/src/assets/css/list_owner.scss
@@ -90,6 +90,7 @@
 
 .item-name{
     margin: 0 0.5em;
+    word-break: break-all;
 }
 
 .edit-item-field {
