--- a/client/src/assets/css/list_shared.scss
+++ b/client/src/assets/css/list_shared.scss
@@ -293,4 +293,7 @@
     .shared-date,.shared-details{
         font-size: 1rem;
     }
+    .shared-label-container {
+        margin: 14% 5% 1% 4.5%;
+    }
 }
