--- a/client/src/assets/css/tooltips.css
+++ b/client/src/assets/css/tooltips.css
@@ -8,6 +8,8 @@
   [tooltip] {
     z-index: 2;
     cursor: pointer;
+    display: flex;
+    align-items: center;
   }
   
   /* Hide the tooltip content by default */
